Updated 0.17 with additional args

--- a/config/crd/bases/cosmos.strange.love_cosmosfullnodes.yaml
+++ b/config/crd/bases/cosmos.strange.love_cosmosfullnodes.yaml
@@ -45,6 +45,11 @@ spec:
               chain:
                 description: Blockchain-specific configuration.
                 properties:
+                  additionalStartArgs:
+                    description: Additional arguments to pass to the chain start command.
+                    items:
+                      type: string
+                    type: array
                   app:
                     description: App configuration applied to app.toml.
                     properties:
